@@ -1,3 +1,8 @@
+2007-01-23  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Several locking fixes when retrieving summary info
+	* Performance improvements in camel-imap-folder.c
+
 2007-01-22  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* Preperation for notification of changes in folders, mostly bugfixes
